--- a/vscode.settings.json
+++ b/vscode.settings.json
@@ -14,6 +14,8 @@
   "files.trimTrailingWhitespace": true,
   // One Dark Pro
   "oneDarkPro.vivid": true,
+  // Terminal
+  "terminal.integrated.shell.windows": "pwsh.exe",
   // Workbench
   "workbench.colorTheme": "One Dark Pro",
   "workbench.iconTheme": "material-icon-theme"
