Enables Roslyn analyzers and sets C# formatter

--- a/vscode.settings.json
+++ b/vscode.settings.json
@@ -12,6 +12,8 @@
   "files.insertFinalNewline": true,
   "files.trimFinalNewlines": true,
   "files.trimTrailingWhitespace": true,
+  // Omnisharp
+  "omnisharp.enableRoslynAnalyzers": true,
   // One Dark Pro
   "oneDarkPro.vivid": true,
   // PowerShell
@@ -21,5 +23,9 @@
   "terminal.integrated.shell.windows": "pwsh.exe",
   // Workbench
   "workbench.colorTheme": "One Dark Pro",
-  "workbench.iconTheme": "material-icon-theme"
+  "workbench.iconTheme": "material-icon-theme",
+  // Language-specific settings
+  "[csharp]": {
+    "editor.defaultFormatter": "ms-dotnettools.csharp"
+  }
 }
