Sets Svelte default formatter in VS Code

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -27,5 +27,8 @@
   // Language-specific settings
   "[csharp]": {
     "editor.defaultFormatter": "ms-dotnettools.csharp"
+  },
+  "[svelte]": {
+    "editor.defaultFormatter": "JamesBirtles.svelte-vscode"
   }
 }
